--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "dateformat": "^5.0.3",
     "dotenv": "^16.5.0",
@@ -26,6 +27,7 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "qs": "^6.14.0",
+    "react-chartjs-2": "^5.3.0",
     "react-google-recaptcha": "^3.1.0",
     "uuid": "^11.1.0",
     "validator": "^13.15.0"
