--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.4.9",
     "font-awesome": "^4.7.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.5.0",
